Hourly scheduled redeploy 03b49261114e4e708ee8912e5381137a5867a44d

--- a/document-types/aaib_report.html
+++ b/document-types/aaib_report.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-europa-g-bxtd">AAIB investigation to Europa,  G-BXTD   </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-rockwell-commander-112-g-lite">AAIB investigation to Rockwell Commander 112,  G-LITE   </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-rans-s6-116-coyote-ii-g-buwk">AAIB investigation to Rans S6-116 Coyote II, G-BUWK</a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-xair-falcon-582-2-g-cgov">AAIB investigation to X&#39;Air Falcon 582(2),  G-CGOV   </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-ikarus-c42-fb100-bravo-g-osph-1-december-2020">AAIB investigation to Ikarus C42 FB100 Bravo, G-OSPH 1 December 2020</a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-aviad-zigolo-mg12-g-ciuf">AAIB investigation to Aviad Zigolo MG12, G-CIUF   </a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=aaib_report&amp;count=10">Source query from Search API</a></p>
 
