--- a/document-types/case_study.html
+++ b/document-types/case_study.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/government/case-studies/thermal-treatment">Thermal Treatment</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/mental-health-and-wellbeing">Mental Health and Wellbeing</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/packaging">Packaging</a></li>
+<li><a href="https://www.gov.uk/government/case-studies/optimising-site-end-states">Optimising Site End States</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/developing-relationships-in-japan">Developing relationships in Japan</a></li>
-<li><a href="https://www.gov.uk/government/case-studies/innovation">Innovation</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=case_study&amp;count=10">Source query from Search API</a></p>
 
