--- a/document-types/document_collection.html
+++ b/document-types/document_collection.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/collections/eu-settlement-scheme-applicant-information">EU Settlement Scheme: applicant information</a></li>
 <li><a href="https://www.gov.uk/government/collections/hm-revenue-and-customs-service-availability-and-issues">HMRC service availability and issues</a></li>
 <li><a href="https://www.gov.uk/government/collections/national-curriculum">National curriculum</a></li>
-<li><a href="https://www.gov.uk/government/collections/how-to-use-the-land-registry-portal">HM Land Registry portal: login and guides</a></li>
+<li><a href="https://www.gov.uk/government/collections/mhra-guidance-on-coronavirus-covid-19">MHRA guidance on coronavirus (COVID-19)</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=document_collection&amp;count=10">Source query from Search API</a></p>
 
