--- a/document-types/hmrc_manual_section.html
+++ b/document-types/hmrc_manual_section.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/business-income-manual/bim52751">BIM52751 - Care providers: childminders: expenses</a></li>
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/employment-status-manual/esm11000">ESM11000 - Check Employment Status For Tax: Contents</a></li>
 <li><a href="https://www.gov.uk/hmrc-internal-manuals/international-exchange-of-information/ieim402040">IEIM402040 - Reportable Information: Tax Identification Number</a></li>
-<li><a href="https://www.gov.uk/hmrc-internal-manuals/cryptoassets-manual/crypto40000">CRYPTO40000 - Cryptoassets for businesses: contents</a></li>
+<li><a href="https://www.gov.uk/hmrc-internal-manuals/cryptoassets-manual/crypto10400">CRYPTO10400 - Introduction to cryptoassets: record keeping</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=hmrc_manual_section&amp;count=10">Source query from Search API</a></p>
 
