--- a/document-types/maib_report.html
+++ b/document-types/maib_report.html
@@ -363,14 +363,14 @@
 <ul>
 <li><a href="https://www.gov.uk/maib-reports/flooding-and-sinking-of-trawler-ocean-quest">Flooding and sinking of trawler Ocean Quest </a></li>
 <li><a href="https://www.gov.uk/maib-reports/safety-warning-about-multiple-cruise-ship-anchor-failures">Safety warning about multiple cruise ship anchor failures</a></li>
+<li><a href="https://www.gov.uk/maib-reports/carbon-monoxide-poisoning-on-motor-cruiser-diversion-with-loss-of-2-lives">Carbon monoxide poisoning on motor cruiser Diversion with loss of 2 lives</a></li>
 <li><a href="https://www.gov.uk/maib-reports/engine-failure-and-subsequent-fire-on-ro-ro-cargo-vessel-finlandia-seaways-with-1-person-injured">Engine failure and subsequent fire on ro-ro cargo vessel Finlandia Seaways with 1 person injured</a></li>
 <li><a href="https://www.gov.uk/maib-reports/collision-between-motor-yachts-minx-and-vision-with-loss-of-1-life">Collision between motor yachts Minx and Vision with loss of 1 life</a></li>
-<li><a href="https://www.gov.uk/maib-reports/entry-to-enclosed-space-on-fishing-vessel-sunbeam-with-loss-of-1-life">Entry to enclosed space on fishing vessel Sunbeam with loss of 1 life</a></li>
-<li><a href="https://www.gov.uk/maib-reports/crush-incident-on-general-cargo-vessel-karina-c-with-loss-of-1-life">Crush incident on general cargo vessel Karina C with loss of 1 life</a></li>
-<li><a href="https://www.gov.uk/maib-reports/capsize-and-full-inversion-of-self-righting-keelboat-rs-venture-connect-sail-number-307-with-loss-of-1-life">Capsize and full inversion of self-righting keelboat RS Venture Connect sail number 307 with loss of 1 life</a></li>
-<li><a href="https://www.gov.uk/maib-reports/loss-of-cargo-containers-overboard-from-container-ship-ever-smart">Loss of cargo containers overboard from container ship Ever Smart</a></li>
+<li><a href="https://www.gov.uk/maib-reports/near-miss-between-ro-ro-ferry-stena-superfast-vii-and-royal-navy-submarine">Near miss between ro-ro ferry Stena Superfast VII and Royal Navy submarine</a></li>
 <li><a href="https://www.gov.uk/maib-reports/grounding-of-general-cargo-vessel-priscilla">Grounding of general cargo vessel Priscilla</a></li>
-<li><a href="https://www.gov.uk/maib-reports/collision-between-2-fire-and-rescue-service-boats-with-loss-of-1-life">Collision between 2 fire and rescue service boats with loss of 1 life</a></li>
+<li><a href="https://www.gov.uk/maib-reports/loss-of-cargo-containers-overboard-from-container-ship-ever-smart">Loss of cargo containers overboard from container ship Ever Smart</a></li>
+<li><a href="https://www.gov.uk/maib-reports/capsize-and-full-inversion-of-self-righting-keelboat-rs-venture-connect-sail-number-307-with-loss-of-1-life">Capsize and full inversion of self-righting keelboat RS Venture Connect sail number 307 with loss of 1 life</a></li>
+<li><a href="https://www.gov.uk/maib-reports/crush-incident-on-general-cargo-vessel-karina-c-with-loss-of-1-life">Crush incident on general cargo vessel Karina C with loss of 1 life</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=maib_report&amp;count=10">Source query from Search API</a></p>
 
