--- a/document-types/notice.html
+++ b/document-types/notice.html
@@ -367,11 +367,11 @@
 <li><a href="https://www.gov.uk/government/publications/stld-annual-tax-on-enveloped-dwellings-ated">Annual Tax on Enveloped Dwellings Returns Notice</a></li>
 <li><a href="https://www.gov.uk/government/publications/notice-252-valuation-of-imported-goods-for-customs-purposes-vat-and-trade-statistics">Notice 252: valuation of imported goods for customs purposes, VAT and trade statistics</a></li>
 <li><a href="https://www.gov.uk/government/publications/public-sector-decarbonisation-scheme-psds">Public Sector Decarbonisation Scheme</a></li>
-<li><a href="https://www.gov.uk/government/publications/vat-notice-733-flat-rate-scheme-for-small-businesses">VAT Notice 733: Flat Rate Scheme for small businesses</a></li>
-<li><a href="https://www.gov.uk/government/publications/vat-notice-70022-making-tax-digital-for-vat">VAT Notice 700/22: Making Tax Digital for VAT</a></li>
-<li><a href="https://www.gov.uk/government/publications/floating-offshore-wind-fow-demonstration-programme">Apply for the Floating Offshore Wind (FOW) Demonstration Programme</a></li>
 <li><a href="https://www.gov.uk/government/publications/vat-notice-7001-should-i-be-registered-for-vat">Who should register for VAT (VAT Notice 700/1)</a></li>
-<li><a href="https://www.gov.uk/government/publications/how-to-get-in-touch-with-the-green-homes-grant-scheme">How to get in touch with the Green Homes Grant scheme</a></li>
+<li><a href="https://www.gov.uk/government/publications/vat-notice-733-flat-rate-scheme-for-small-businesses">VAT Notice 733: Flat Rate Scheme for small businesses</a></li>
+<li><a href="https://www.gov.uk/government/publications/floating-offshore-wind-fow-demonstration-programme">Apply for the Floating Offshore Wind (FOW) Demonstration Programme</a></li>
+<li><a href="https://www.gov.uk/government/publications/vat-notice-70022-making-tax-digital-for-vat">VAT Notice 700/22: Making Tax Digital for VAT</a></li>
+<li><a href="https://www.gov.uk/government/publications/medicines-terminated-and-cancelled-manufacturing-and-wholesale-dealer-licences">Medicines: terminated and cancelled manufacturing and wholesale dealer licences</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=notice&amp;count=10">Source query from Search API</a></p>
 
