--- a/document-types/about.html
+++ b/document-types/about.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/organisations/ofsted/about">Ofsted – About us</a></li>
 <li><a href="https://www.gov.uk/government/organisations/medicines-and-healthcare-products-regulatory-agency/about">Medicines and Healthcare products Regulatory Agency – About us</a></li>
 <li><a href="https://www.gov.uk/government/organisations/uk-visas-and-immigration/about">UK Visas and Immigration – About us</a></li>
-<li><a href="https://www.gov.uk/government/organisations/department-of-health-and-social-care/about">Department of Health and Social Care – About us</a></li>
+<li><a href="https://www.gov.uk/government/organisations/civil-service/about">Civil Service – About us</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=about&amp;count=10">Source query from Search API</a></p>
 
