--- a/document-types/answer.html
+++ b/document-types/answer.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship</a></li>
 <li><a href="https://www.gov.uk/apply-national-insurance-number">Apply for a National Insurance number</a></li>
 <li><a href="https://www.gov.uk/dbs-update-service">DBS Update Service</a></li>
-<li><a href="https://www.gov.uk/search-for-trademark">Search for a trade mark</a></li>
+<li><a href="https://www.gov.uk/log-in-hmrc-excise-import-export">Sign in to HMRC excise, import and export services</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=answer&amp;count=10">Source query from Search API</a></p>
 
