--- a/document-types/closed_consultation.html
+++ b/document-types/closed_consultation.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/government/consultations/national-planning-policy-framework-and-national-model-design-code-consultation-proposals">National Planning Policy Framework and National Model Design Code: consultation proposals</a></li>
 <li><a href="https://www.gov.uk/government/consultations/subsidy-control-designing-a-new-approach-for-the-uk">Subsidy control: designing a new approach for the UK</a></li>
 <li><a href="https://www.gov.uk/government/consultations/planning-for-the-future">Planning for the future</a></li>
-<li><a href="https://www.gov.uk/government/consultations/ethnic-disparities-and-inequality-in-the-uk-call-for-evidence">Ethnic disparities and inequality in the UK: call for evidence</a></li>
 <li><a href="https://www.gov.uk/government/consultations/green-paper-transforming-public-procurement">Green Paper: Transforming public procurement</a></li>
+<li><a href="https://www.gov.uk/government/consultations/ending-the-sale-of-energy-drinks-to-children">Ending the sale of energy drinks to children</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=closed_consultation&amp;count=10">Source query from Search API</a></p>
 
