--- a/document-types/contact.html
+++ b/document-types/contact.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/vat-enquiries">VAT: general enquiries</a></li>
 <li><a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/national-insurance-enquiries-for-employees-and-individuals">National Insurance: general enquiries</a></li>
 <li><a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/employer-enquiries">Employers: general enquiries</a></li>
-<li><a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/self-assessment-online-services-helpdesk">Self Assessment: online services </a></li>
+<li><a href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/get-help-with-the-self-employment-income-support-scheme">Get help with the Self-Employment Income Support Scheme</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=contact&amp;count=10">Source query from Search API</a></p>
 
