--- a/document-types/correspondence.html
+++ b/document-types/correspondence.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/publications/treasury-direction-made-by-the-chancellor-under-sections-71-and-76-of-the-coronavirus-act-2020">Treasury Direction made by the Chancellor under Section 76 of the Coronavirus Act 2020</a></li>
 <li><a href="https://www.gov.uk/government/publications/esfa-update-7-april-2021">ESFA Update: 7 April 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/esfa-update-31-march-2021">ESFA Update: 31 March 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/treasury-direction-made-by-the-chancellor-under-sections-71-and-76-of-the-coronavirus-act-2020">Treasury Direction made by the Chancellor under Section 76 of the Coronavirus Act 2020</a></li>
 <li><a href="https://www.gov.uk/government/publications/coronavirus-covid-19-supporting-the-reopening-of-outdoor-hospitality">Coronavirus (COVID-19): Supporting the reopening of outdoor hospitality</a></li>
 <li><a href="https://www.gov.uk/government/publications/guidance-to-parents-and-guardians-when-you-should-book-a-coronavirus-test-for-your-child">Guidance to parents and guardians: when you should book a coronavirus test for your child</a></li>
+<li><a href="https://www.gov.uk/government/publications/esfa-update-31-march-2021">ESFA Update: 31 March 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/coronavirus-covid-19-dvsa-chief-executive-letter-to-driving-instructors-about-lessons-and-tests">Coronavirus (COVID-19): DVSA Chief Executive letter to driving instructors about lessons and tests</a></li>
 <li><a href="https://www.gov.uk/government/publications/letter-from-the-health-and-social-care-secretary-on-covid-19-vaccination-to-protect-severely-immunosuppressed-adults">Letter from the Health and Social Care Secretary on COVID-19 vaccination to protect severely immunosuppressed adults</a></li>
 <li><a href="https://www.gov.uk/government/publications/letter-from-the-health-and-social-care-secretary-on-use-of-the-moderna-vaccine">Letter from the Health and Social Care Secretary on use of the Moderna vaccine</a></li>
 <li><a href="https://www.gov.uk/government/publications/covid-19-hotel-accommodation-to-support-key-workers-and-vulnerable-people">Coronavirus (COVID-19): letter from Minister Hall to hotels on providing accommodation to support key workers and vulnerable people</a></li>
-<li><a href="https://www.gov.uk/government/publications/commission-on-race-and-ethnic-disparities-letter-to-the-minister-for-equalities">Commission on Race and Ethnic Disparities: letter to the Minister for Equalities</a></li>
+<li><a href="https://www.gov.uk/government/publications/coronavirus-act-2020-residential-tenancies-protection-from-eviction-amendment-england-regulations-2020-letter-to-local-authorities">Coronavirus Act 2020 (Residential Tenancies: Protection from Eviction) (Amendment) (England) Regulations 2020: letter to local authorities</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=correspondence&amp;count=10">Source query from Search API</a></p>
 
