--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttps//www.moneyadviceservice.org.uk/en/categories/managing-debt">Debt management - Money Advice Service</a></li>
-<li><a href="https://www.gov.ukhttp//www.parliament.uk/business/publications/hansard/">Hansard - UK Parliament</a></li>
-<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.mendip.gov.uk">Mendip District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.justice.gov.uk/courts/procedure-rules/family">Family Procedure Rules</a></li>
-<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.canterbury.gov.uk">Canterbury City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/east">East Dorset District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.tamworth.gov.uk">Tamworth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.redbridge.gov.uk/">London Borough of Redbridge Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.ncsc.gov.uk">National Cyber Security Centre</a></li>
+<li><a href="https://www.gov.ukhttp//www.banbridge.com/">Banbridge District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.basingstoke.gov.uk">Basingstoke and Deane Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.derbyshire.gov.uk">Derbyshire County Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
