--- a/document-types/fatality_notice.html
+++ b/document-types/fatality_notice.html
@@ -363,14 +363,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/fatalities/second-lieutenant-joanna-yorke-dyer-corporal-kris-oneill-private-eleanor-dlugosz-and-kingsman-adam-james-smith-killed-in-iraq">Second Lieutenant Joanna Yorke Dyer, Corporal Kris O&#39;Neill, Private Eleanor Dlugosz and Kingsman Adam James Smith killed in Iraq</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/lance-corporal-liam-richard-tasker-killed-in-afghanistan">Lance Corporal Liam Richard Tasker killed in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/corporal-david-oconnor-and-corporal-channing-day-killed-in-afghanistan">Corporal David O&#39;Connor and Corporal Channing Day killed in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/fourteen-personnel-in-afghanistan-nimrod-crash-named">Fourteen personnel in Afghanistan Nimrod crash named</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/senior-aircraftman-graham-livingstone-and-senior-aircraftman-gary-thompson-killed-in-afghanistan">Senior Aircraftman Graham Livingstone and Senior Aircraftman Gary Thompson killed in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/corporal-jack-leslie-stanley-dies-of-wounds-sustained-in-afghanistan">Corporal Jack Leslie Stanley dies of wounds sustained in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/marine-travis-mackin-killed-in-helmand">Marine Travis Mackin killed in Helmand</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/fourteen-personnel-in-afghanistan-nimrod-crash-named">Fourteen personnel in Afghanistan Nimrod crash named</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/colour-sergeant-m-l-powell-and-sergeant-mark-j-mclaren-killed-in-iraq">Colour Sergeant M L Powell and Sergeant Mark J McLaren killed in Iraq</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/trooper-james-munday-killed-in-afghanistan">Trooper James Munday killed in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/marine-travis-mackin-killed-in-helmand">Marine Travis Mackin killed in Helmand</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/corporal-jack-leslie-stanley-dies-of-wounds-sustained-in-afghanistan">Corporal Jack Leslie Stanley dies of wounds sustained in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/guardsman-neil-tony-downes-killed-in-afghanistan">Guardsman Neil &lsquo;Tony&rsquo; Downes killed in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/five-personnel-in-basra-helicopter-crash-named">Five personnel in Basra helicopter crash named</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/corporal-david-oconnor-and-corporal-channing-day-killed-in-afghanistan">Corporal David O&#39;Connor and Corporal Channing Day killed in Afghanistan</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=fatality_notice&amp;count=10">Source query from Search API</a></p>
 
