--- a/document-types/foi_release.html
+++ b/document-types/foi_release.html
@@ -363,14 +363,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/publications/grade-and-salary-bands">Grade and salary bands</a></li>
 <li><a href="https://www.gov.uk/government/publications/response-to-a-freedom-of-information-request-on-greensill">Response to a Freedom of Information request on Greensill</a></li>
-<li><a href="https://www.gov.uk/government/publications/check-employment-status-for-tax-cest-2019-enhancement">Check Employment Status for Tax (CEST): 2019 Enhancement</a></li>
 <li><a href="https://www.gov.uk/government/publications/registered-sex-offenders">Registered Sex Offenders</a></li>
+<li><a href="https://www.gov.uk/government/publications/check-employment-status-for-tax-cest-2019-enhancement">Check Employment Status for Tax (CEST): 2019 Enhancement</a></li>
 <li><a href="https://www.gov.uk/government/publications/job-title-grade-and-salary">Job title, grade and salary</a></li>
 <li><a href="https://www.gov.uk/government/publications/ufo-reports-in-the-uk">UFO reports in the UK</a></li>
 <li><a href="https://www.gov.uk/government/publications/foi-release-pay-scales">FOI release: Pay scales</a></li>
 <li><a href="https://www.gov.uk/government/publications/period-that-individuals-may-be-outside-the-uk-without-losing-their-indefinite-leave-to-remain">Period that individuals may be outside the UK without losing their Indefinite Leave to Remain</a></li>
-<li><a href="https://www.gov.uk/government/publications/list-of-ukvi-international-application-points-and-decision-making-centres">List of UKVI international application points and decision making centres</a></li>
 <li><a href="https://www.gov.uk/government/publications/a-list-of-all-companies-registered-with-companies-house-to-date">A list of all companies registered with Companies House to date</a></li>
+<li><a href="https://www.gov.uk/government/publications/nominal-criminal-records-on-the-police-national-computer">Nominal Criminal records on the Police National Computer</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=foi_release&amp;count=10">Source query from Search API</a></p>
 
