--- a/document-types/guidance.html
+++ b/document-types/guidance.html
@@ -368,9 +368,9 @@
 <li><a href="https://www.gov.uk/government/publications/rates-of-vehicle-tax-v149">Vehicle tax rates (V149 and V149/1)</a></li>
 <li><a href="https://www.gov.uk/government/publications/reopening-businesses-and-venues-in-england">Reopening businesses and venues in England</a></li>
 <li><a href="https://www.gov.uk/government/publications/nhs-qr-code-venue-posters-privacy-notice">NHS QR code venue posters: privacy notice</a></li>
-<li><a href="https://www.gov.uk/government/publications/success-profiles">Success Profiles</a></li>
-<li><a href="https://www.gov.uk/government/publications/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19">COVID-19: guidance on shielding and protecting people defined on medical grounds as extremely vulnerable</a></li>
 <li><a href="https://www.gov.uk/government/publications/face-coverings-when-to-wear-one-and-how-to-make-your-own">Face coverings: when to wear one, exemptions, and how to make one</a></li>
+<li><a href="https://www.gov.uk/government/publications/success-profiles">Success Profiles</a></li>
+<li><a href="https://www.gov.uk/government/publications/list-of-private-providers-of-coronavirus-testing">Private providers of coronavirus testing</a></li>
 <li><a href="https://www.gov.uk/government/publications/personal-information-use-in-borders-immigration-and-citizenship">Borders, immigration and citizenship: privacy information notice</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=guidance&amp;count=10">Source query from Search API</a></p>
