--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--4">Turks and Caicos post Cabinet update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/%E5%8A%A0%E5%BC%B7%E9%9B%99%E9%82%8A%E6%99%BA%E8%B2%A1%E6%AC%8A%E5%90%88%E4%BD%9C-%E8%8B%B1%E5%9C%8B%E8%88%87%E5%8F%B0%E7%81%A3%E7%B0%BD%E7%BD%B2%E6%99%BA%E6%85%A7%E8%B2%A1%E7%94%A2%E6%AC%8A%E5%90%88%E4%BD%9C%E5%82%99%E5%BF%98%E9%8C%84">加強雙邊智財權合作 英國與台灣簽署智慧財產權合作備忘錄</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269052.es-419">Referentes locales compartieron sus experiencias sobre liderazgo en las Chevening TALKS</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/174063.pt">VisitBritain anuncia parceria com Rock in Rio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284868.es-419">ProInversión inicia capacitación a gobiernos regionales y locales en APP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/farewell-happy-hour-to-celebrate-20162017-chevening-scholars">Farewell ‘happy hour’ to celebrate 2016/2017 Chevening scholars</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/eu-member-states-embassies-mark-climate-change-day-in-tashkent">EU Member States’ embassies mark Climate Change Day in Tashkent</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263031.es-419">Términos y condiciones del concurso #MusicIsGREAT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/293828.es-419">Call for Security and Justice Concept Bids</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
