--- a/document-types/place.html
+++ b/document-types/place.html
@@ -367,10 +367,10 @@
 <li><a href="https://www.gov.uk/id-scan-eu-settlement-scheme">Where to scan your ID document for the EU Settlement Scheme</a></li>
 <li><a href="https://www.gov.uk/find-theory-test-centre">Find a theory test centre</a></li>
 <li><a href="https://www.gov.uk/health-protection-team">Find your local health protection team in England</a></li>
-<li><a href="https://www.gov.uk/disabled-students-allowances-assessment-centre">Find a Disabled Students&rsquo; Allowances assessment centre</a></li>
 <li><a href="https://www.gov.uk/report-child-abuse-to-local-council">Report child abuse to a local council</a></li>
+<li><a href="https://www.gov.uk/disabled-students-allowances-assessment-centre">Find a Disabled Students&rsquo; Allowances assessment centre</a></li>
 <li><a href="https://www.gov.uk/find-vehicle-scrapyard">Find a vehicle scrapyard</a></li>
-<li><a href="https://www.gov.uk/help-eu-settlement-scheme">Get help applying to the EU Settlement Scheme</a></li>
+<li><a href="https://www.gov.uk/find-driving-instructor-training">Find driving instructor training courses</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=place&amp;count=10">Source query from Search API</a></p>
 
