--- a/document-types/regulation.html
+++ b/document-types/regulation.html
@@ -365,12 +365,12 @@
 <li><a href="https://www.gov.uk/government/publications/manual-of-airworthiness-maintenance-processes-mam-p">Manual of Airworthiness Maintenance – Processes (MAM-P)</a></li>
 <li><a href="https://www.gov.uk/government/publications/employment-tribunal-procedure-rules">Employment tribunal procedure rules</a></li>
 <li><a href="https://www.gov.uk/government/publications/manual-of-airworthiness-maintenance-documentation-mam-d">Manual of Airworthiness Maintenance – Documentation (MAM-D)</a></li>
-<li><a href="https://www.gov.uk/government/publications/vocational-and-technical-qualifications-contingency-regulatory-framework">Vocational and technical qualifications contingency regulatory framework</a></li>
 <li><a href="https://www.gov.uk/government/publications/model-articles-for-private-companies-limited-by-guarantee">Model articles for private companies limited by guarantee</a></li>
+<li><a href="https://www.gov.uk/government/publications/vocational-and-technical-qualifications-contingency-regulatory-framework">Vocational and technical qualifications contingency regulatory framework</a></li>
 <li><a href="https://www.gov.uk/government/publications/general-qualifications-alternative-awarding-framework">General Qualifications Alternative Awarding Framework</a></li>
 <li><a href="https://www.gov.uk/government/publications/non-statutory-digital-markets-unit-terms-of-reference">Non-statutory Digital Markets Unit: terms of reference</a></li>
 <li><a href="https://www.gov.uk/government/publications/immigration-and-asylum-chamber-tribunal-procedure-rules">Immigration and Asylum Chamber tribunal procedure rules</a></li>
-<li><a href="https://www.gov.uk/government/publications/notice-of-authorised-amendments-naa-reference-table">Notice of authorised amendments (NAA) reference table</a></li>
+<li><a href="https://www.gov.uk/government/publications/notice-of-authorised-amendments-naa-2021-documents">Notice of authorised amendments (NAA) 2021 documents</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=regulation&amp;count=10">Source query from Search API</a></p>
 
