--- a/document-types/research_for_development_output.html
+++ b/document-types/research_for_development_output.html
@@ -362,13 +362,13 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/research-for-development-outputs/implementing-inclusive-education">Implementing Inclusive Education</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/fair-society-healthy-lives-the-marmot-review-strategic-review-of-health-inequalities-in-england-post-2010">Fair society, healthy lives : the Marmot Review : strategic review of health inequalities in England post-2010.</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/benefits-of-stem-education">Benefits of STEM Education</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/the-education-for-all-and-inclusive-education-debate-conflict-contradiction-or-opportunity">The Education for All and inclusive education debate: conflict, contradiction or opportunity?</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/theories-of-behavior-change">Theories of Behavior Change</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/social-exclusion-topic-guide">Social exclusion: topic guide</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/the-education-for-all-and-inclusive-education-debate-conflict-contradiction-or-opportunity">The Education for All and inclusive education debate: conflict, contradiction or opportunity?</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/topic-guide-effective-post-disaster-reconstruction-programmes">Topic Guide: Effective post-disaster reconstruction programmes</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/treatments-for-suppression-of-lactation">Treatments for suppression of lactation</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/theories-of-behavior-change">Theories of Behavior Change</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/dynamic-cone-penetrometer-tests-and-analysis-technical-information-note">Dynamic Cone Penetrometer tests and analysis. Technical Information Note.</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/a-framework-and-indicators-to-improve-research-capacity-strengthening-evaluation-practice">A Framework and Indicators to Improve Research Capacity Strengthening Evaluation Practice</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/outlier-vietnam-and-the-problem-of-embeddedness">Outlier Vietnam and the Problem of Embeddedness</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=research_for_development_output&amp;count=10">Source query from Search API</a></p>
 
