--- a/document-types/residential_property_tribunal_decision.html
+++ b/document-types/residential_property_tribunal_decision.html
@@ -362,15 +362,15 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/41-wingfield-road-gravesend-kent-da12-1bs-chi-slash-29ug-slash-f77-slash-2021-slash-0010">41 Wingfield Road, Gravesend, Kent, DA12 1BS: CHI/29UG/F77/2021/0010</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-11-rochester-mansions-7-9-church-road-hove-bn3-2ha-chi-00ml-lbc-2019-0052">Flat 11 Rochester Mansions, 7-9 Church Road, Hove BN3 2HA - CHI/00ML/LBC/2019/0052</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/1-sandringham-road-pilgrims-hatch-brentwood-essex-cm15-9ph-cam-slash-22ud-slash-hmk-slash-2020-slash-0014">1 Sandringham Road, Pilgrims Hatch, Brentwood, Essex CM15 9PH: CAM/22UD/HMK/2020/0014</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/11-15-rockall-court-langley-slough-sl3-8ez-cam-slash-00md-slash-lsc-slash-2020-slash-0039">11-15 Rockall Court, Langley, Slough SL3 8EZ: CAM/00MD/LSC/2020/0039</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/the-grand-the-leas-folkestone-kent-ct20-2lr-chi-29ul-lvm-2020-0001">The Grand, The Leas, Folkestone, Kent CT20 2LR: CHI/29UL/LVM/2020/0001</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-11-rochester-mansions-7-9-church-road-hove-bn3-2ha-chi-00ml-lbc-2019-0052">Flat 11 Rochester Mansions, 7-9 Church Road, Hove BN3 2HA - CHI/00ML/LBC/2019/0052</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/45-broad-street-leominster-hereford-hr6-8dd-bir-slash-00ga-slash-hml-slash-2020-slash-0014">45 Broad Street, Leominster, Hereford, HR6 8DD: BIR/00GA/HML/2020/0014</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/11-15-rockall-court-langley-slough-sl3-8ez-cam-slash-00md-slash-lsc-slash-2020-slash-0039">11-15 Rockall Court, Langley, Slough SL3 8EZ: CAM/00MD/LSC/2020/0039</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/111-st-pauls-road-southsea-hampshire-po5-2ab-chi-slash-00mr-slash-hmv-slash-2020-slash-0003">111 St Paul’s Road Southsea Hampshire PO5 2AB : CHI/00MR/HMV/2020/0003 </a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/the-grand-the-leas-folkestone-kent-ct20-2lr-chi-29ul-lvm-2020-0001">The Grand, The Leas, Folkestone, Kent CT20 2LR: CHI/29UL/LVM/2020/0001</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/snowdon-mount-4-snowdon-road-bournemouth-dorset-bh4-9hl-chi-00hn-ldc-2019-0023">Snowdon Mount, 4 Snowdon Road, Bournemouth, Dorset, BH4 9HL: CHI/00HN/LDC/2019/0023</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/mereoak-park-three-mile-cross-reading-rg7-1nr-cam-slash-00mf-slash-phc-slash-2020-slash-0007">Mereoak Park, Three Mile Cross, Reading, RG7 1NR: CAM/00MF/PHC/2020/0007</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/5-st-stephens-cottages-70-vincent-road-kingston-upon-thames-surrey-kt1-3hj-lon-slash-00ax-slash-lbc-slash-2020-slash-0034">5 St Stephens Cottages, 70 Vincent Road, Kingston Upon Thames, Surrey, KT1 3HJ : LON/00AX/LBC/2020/0034</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/111-st-pauls-road-southsea-hampshire-po5-2ab-chi-slash-00mr-slash-hmv-slash-2020-slash-0003">111 St Paul’s Road Southsea Hampshire PO5 2AB : CHI/00MR/HMV/2020/0003 </a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/87-ryelands-street-hereford-hr4-0ln-bir-slash-00ga-slash-hml-slash-2020-slash-0013">87 Ryelands Street, Hereford, HR4 0LN: BIR/00GA/HML/2020/0013</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=residential_property_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
