--- a/document-types/transparency.html
+++ b/document-types/transparency.html
@@ -366,12 +366,12 @@
 <li><a href="https://www.gov.uk/government/publications/employers-who-have-claimed-through-the-coronavirus-job-retention-scheme">Employers who have claimed through the Coronavirus Job Retention Scheme</a></li>
 <li><a href="https://www.gov.uk/government/publications/royal-courts-of-justice-cause-list">Royal Courts of Justice Cause List</a></li>
 <li><a href="https://www.gov.uk/government/publications/coronavirus-cases-by-local-authority-epidemiological-data-8-april-2021">Coronavirus cases by local authority: epidemiological data, 8 April 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/coronavirus-england-briefing-1-april-2021">Coronavirus England briefing, 1 April 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/current-registered-providers-of-social-housing">Current registered providers of social housing</a></li>
 <li><a href="https://www.gov.uk/government/publications/business-and-property-courts-rolls-building-cause-list">Business and Property Courts Rolls Building Cause List</a></li>
+<li><a href="https://www.gov.uk/government/publications/current-registered-providers-of-social-housing">Current registered providers of social housing</a></li>
 <li><a href="https://www.gov.uk/government/publications/eighty-fifth-sage-meeting-on-covid-19-31-march-2021">SAGE 85 minutes: Coronavirus (COVID-19) response, 31 March 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/coronavirus-england-briefing-1-april-2021">Coronavirus England briefing, 1 April 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/reported-coronavirus-covid-19-cases-by-registered-early-years-and-childcare-settings">Reported coronavirus (COVID-19) notifications by registered early years and childcare settings</a></li>
-<li><a href="https://www.gov.uk/government/publications/coronavirus-cases-by-local-authority-epidemiological-data-18-march-2021">Coronavirus cases by local authority: epidemiological data, 18 March 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/active-mot-test-stations">Active MOT test stations</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=transparency&amp;count=10">Source query from Search API</a></p>
 
