--- a/document-types/travel_advice.html
+++ b/document-types/travel_advice.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/foreign-travel-advice/pakistan">Pakistan travel advice</a></li>
 <li><a href="https://www.gov.uk/foreign-travel-advice/portugal">Portugal travel advice</a></li>
 <li><a href="https://www.gov.uk/foreign-travel-advice/italy">Italy travel advice</a></li>
-<li><a href="https://www.gov.uk/foreign-travel-advice/cyprus">Cyprus travel advice</a></li>
+<li><a href="https://www.gov.uk/foreign-travel-advice/romania">Romania travel advice</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=travel_advice&amp;count=10">Source query from Search API</a></p>
 
