--- a/document-types/world_news_story.html
+++ b/document-types/world_news_story.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/government/news/call-for-bids-supporting-women-peace-and-security-in-iraq">Call for bids: supporting Women, Peace and Security in Iraq</a></li>
 <li><a href="https://www.gov.uk/government/news/tier-4-student-visa-checklist">Tier 4 student visa checklist</a></li>
 <li><a href="https://www.gov.uk/government/news/changes-to-british-passport-services-in-australia">Changes to British Passport Services in Australia</a></li>
-<li><a href="https://www.gov.uk/government/news/british-embassy-manila-convenes-philippine-private-sector-ahead-of-cop26">British Embassy Manila convenes Philippine private sector ahead of COP26</a></li>
+<li><a href="https://www.gov.uk/government/news/be-travel-aware">Be Travel Aware: Check your passport&rsquo;s validity</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=world_news_story&amp;count=10">Source query from Search API</a></p>
 
