--- a/document-types/written_statement.html
+++ b/document-types/written_statement.html
@@ -369,7 +369,7 @@
 <li><a href="https://www.gov.uk/government/speeches/review-of-local-restriction-tiers-17-december-2020">Review of local restriction tiers: 17 December 2020</a></li>
 <li><a href="https://www.gov.uk/government/speeches/local-transport-update-national-bus-strategy-for-england-published">Local transport update: national bus strategy for England published</a></li>
 <li><a href="https://www.gov.uk/government/speeches/travel-corridors">Travel corridors</a></li>
-<li><a href="https://www.gov.uk/government/speeches/revising-the-charging-regime-at-the-dartford-thurrock-river-crossing">Revising the charging regime at the Dartford-Thurrock river crossing</a></li>
+<li><a href="https://www.gov.uk/government/speeches/vehicle-registration-and-licensing-in-northern-ireland">Vehicle registration and licensing in Northern Ireland</a></li>
 <li><a href="https://www.gov.uk/government/speeches/response-to-gender-recognition-act-2004-consultation">Written Ministerial Statement: Response to Gender Recognition Act (2004) consultation</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=written_statement&amp;count=10">Source query from Search API</a></p>
