--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
-      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
-      <li><a href="https://www.moneyadviceservice.org.uk/en/categories/managing-debt" class="govuk-link">Debt management - Money Advice Service</a></li>
-      <li><a href="http://www.basingstoke.gov.uk" class="govuk-link">Basingstoke and Deane Borough Council</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.brent.gov.uk" class="govuk-link">London Borough of Brent Council</a></li>
       <li><a href="http://www.arun.gov.uk/" class="govuk-link">Arun District Council</a></li>
+      <li><a href="http://www.plymouth.gov.uk" class="govuk-link">Plymouth City Council</a></li>
+      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
       <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
-      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
-      <li><a href="https://census.gov.uk/" class="govuk-link">Census 2021</a></li>
+      <li><a href="http://www.oadby-wigston.gov.uk" class="govuk-link">Oadby and Wigston Borough Council</a></li>
+      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
+      <li><a href="http://www.maidstone.gov.uk/" class="govuk-link">Maidstone Borough Council</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
