--- a/manual/on-call.html
+++ b/manual/on-call.html
@@ -174,15 +174,8 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
             
   <p><a href='/manual.html#2nd-line'>2nd line</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/e2532ced37bee8c22e6a9f69fcc58b936e78f123">14 Oct 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
 </div>
 
  <h1 id='header'>Out of hours support (on-call)</h1> <blockquote>
@@ -208,8 +201,7 @@ on your phone.</li>
 <li>Ensure you can access the <code>govuk_development</code> organisation in GOV.UK PaaS
 from the command line (<a href="https://docs.cloud.service.gov.uk/get_started.html#set-up-the-cloud-foundry-command-line">instructions for setting up the cloud foundry command line</a>).</li>
 <li>Ensure you know how to escalate an issue to RE, ie infrastructure
-issues or if you need to <a href="/manual/connect-to-vcloud-director.html">access the Carrenza vCloud
-Director</a>.</li>
+issues.</li>
 <li>Read these documents:
 
 <ul>
