--- a/manual/alerts/high-nginx-5xx-rate.html
+++ b/manual/alerts/high-nginx-5xx-rate.html
@@ -163,21 +163,13 @@
     </div>
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/59ebd3d1b46329c4435a82aacac31124ee77dd6f">17 Sep 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
 </div>
 
- <h1 id='header'>High Nginx 5xx rate</h1> <p>You can view the 5xx logs across all machines on these two dashboards:</p>
+ <h1 id='header'>High Nginx 5xx rate</h1> <p>You can view the 5xx logs across all machines on this dashboard:</p>
 
 <ul>
-<li><a href="https://grafana.publishing.service.gov.uk/dashboard/file/nginx_requests.json?refresh=1m&amp;orgId=1&amp;var-Machines=All&amp;var-Hostname=All&amp;var-Status=5xx">Nginx 5xx Requests (Carrenza)</a></li>
 <li><a href="https://grafana.blue.production.govuk.digital/dashboard/file/nginx_requests.json?refresh=1m&amp;orgId=1&amp;var-Machines=All&amp;var-Hostname=All&amp;var-Status=5xx">Nginx 5xx Requests (AWS)</a></li>
 </ul>
 <p>Change the hostname to view different apps.</p>
