--- a/manual/alerts/pingdom-search-check.html
+++ b/manual/alerts/pingdom-search-check.html
@@ -152,21 +152,14 @@
     </div>
 
      <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/61581e2c262b7ec9c5d2af532147d34e7a6bdb90">17 Sep 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
 </div>
 
  <h1 id='header'>Pingdom search check</h1> <p>If Pingdom can&rsquo;t retrieve the search results page, it means that while GOV.UK
 may be available, it is not possible to retrieve dynamic content. Assuming that
 the homepage check has not failed, the CDN is probably OK. It is possible for
-our main provider (Carrenza/AWS) to be down and for us to serve static content
+our main provider (AWS) to be down and for us to serve static content
 from a secondary mirror at a second supplier (AWS/GCP).</p>
 <p>This is not as critical a problem as you might assume, because a large amount
 of traffic from external searches goes directly to static content and can be
