--- a/manual/encrypted-hiera-data.html
+++ b/manual/encrypted-hiera-data.html
@@ -209,7 +209,7 @@
             
   <p><a href='/manual.html#deployment'>Deployment</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/3a31bc283cbbc19c09cb06396478779903cc0c3b">9 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
 </div>
 
  <h1 id='header'>Handle encrypted hieradata</h1> <p><a href="https://docs.puppetlabs.com/hiera/1/">Hiera</a> is a key-value lookup tool
@@ -317,8 +317,7 @@ Hiera eYAML doesn&rsquo;t always treat it as an error.</p>
 <h2 id='managing-access-to-encrypted-hiera-data'>Managing access to encrypted Hiera data</h2><p>The list of people that have access to encrypted Hiera data in stored in a
 recipient file specific to each environment (<code>.rcp</code> extension).</p>
 <p>The production and integration files are stored in the govuk-secrets repo for
-<a href="https://github.com/alphagov/govuk-secrets/tree/master/puppet/gpg_recipients">Carrenza</a>
-and <a href="https://github.com/alphagov/govuk-secrets/tree/master/puppet_aws/gpg_recipients">AWS</a>.
+<a href="https://github.com/alphagov/govuk-secrets/tree/master/puppet_aws/gpg_recipients">AWS</a>.
 There is no separate staging file; the production file is used for both
 staging and production.</p>
 <p>Each line in a recipient file corresponds to a <a href="http://en.wikipedia.org/wiki/Public_key_fingerprint">GPG fingerprint</a> and
@@ -331,9 +330,7 @@ recipient file pertains to.</p>
 <li>Ask the joiner to <a href="/manual/create-a-gpg-key.html">create a GPG key</a> and upload it
 to a public key server (such as <a href="https://pgp.mit.edu/">https://pgp.mit.edu/</a>).</li>
 <li>Get the fingerprint of the new GPG key by running <code>gpg --fingerprint</code>.</li>
-<li>Add the joiners&rsquo;s GPG fingerprint to each of the recipient files
-for Carrenza
-<a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/integration_hiera_gpg.rcp">integration</a>,
+<li>Add the joiners&rsquo;s GPG fingerprint to the recipient files
 AWS <a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_aws/gpg_recipients/integration_hiera_gpg.rcp">integration</a></li>
 <li>Recrypt the hieradata by running <code>re-encrypt-all.sh &lt;message&gt;</code> where <code>&lt;message&gt;</code>
 is something like &ldquo;Adding new key for Jane Smith&rdquo;.</li>
@@ -345,16 +342,13 @@ started your PR. The encrypted hieradata files are effectively binary data
 that git&rsquo;s text diff may not correctly merge. You will likely have to
 reset your recrypted versions and start again from the versions on master.</li>
 </ol>
-<h3 id='what-to-do-when-someone-gets-production-access'>What to do when someone gets production access</h3><p>Follow the steps above but add their GPG fingerprint to the production recipient files for Carrenza <a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/production_hiera_gpg.rcp">production</a> and AWS <a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_aws/gpg_recipients/production_hiera_gpg.rcp">production</a>.</p>
+<h3 id='what-to-do-when-someone-gets-production-access'>What to do when someone gets production access</h3><p>Follow the steps above but add their GPG fingerprint to the production recipient files AWS <a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_aws/gpg_recipients/production_hiera_gpg.rcp">production</a>.</p>
 <p>Note there are no staging recipient files - access to staging secrets is controlled by the production recipient files.</p>
 <h3 id='what-to-do-when-someone-leaves'>What to do when someone leaves</h3><p>Remove leavers from all recipient files, so that they can no longer change
 credentials.</p>
 
 <ol>
 <li>Delete the leaver&rsquo;s GPG fingerprint from each of the recipient files
-for Carrenza
-<a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/integration_hiera_gpg.rcp">integration</a>
-and <a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/production_hiera_gpg.rcp">production</a>,
 AWS <a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_aws/gpg_recipients/integration_hiera_gpg.rcp">integration</a>
 and <a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_aws/gpg_recipients/production_hiera_gpg.rcp">production</a>.
 There are no staging recipient files since these are the same as the
@@ -436,12 +430,10 @@ key and add the new fingerprint (as obtained above). If you changed:</p>
 <li>integration:
 
 <ul>
-<li><a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/integration_hiera_gpg.rcp">carrenza puppet recipients file for integration</a></li>
-<li><a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/integration_hiera_gpg.rcp">aws puppet recipients file for integration</a></li>
+<li><a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_aws/gpg_recipients/integration_hiera_gpg.rcp">aws puppet recipients file for integration</a></li>
 <li><a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_common/gpg_recipients.rb">common puppet ruby recipient file</a></li>
 <li>production:</li>
-<li><a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/production_hiera_gpg.rcp">carrenza puppet recipients file for production</a></li>
-<li><a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet/gpg_recipients/production_hiera_gpg.rcp">aws puppet recipients file for production</a></li>
+<li><a href="https://github.com/alphagov/govuk-secrets/blob/master/puppet_aws/gpg_recipients/production_hiera_gpg.rcp">aws puppet recipients file for production</a></li>
 </ul></li>
 </ol></li>
 <li><p>Add and commit locally your changes to govuk-secrets. You can then use
