--- a/manual/environments.html
+++ b/manual/environments.html
@@ -159,12 +159,12 @@
             
   <p><a href='/manual.html#infrastructure'>Infrastructure</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/b3e1628891af7a48334c73a6f3e39bc746ea3f08">6 Nov 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
 </div>
 
  <h1 id='header'>GOV.UK's environments (integration, staging, production)</h1> <p>GOV.UK has several environments with different purposes.</p>
 <p>For a quick view of what&rsquo;s where, you can use the <a href="https://release.publishing.service.gov.uk">release app</a>.</p>
-<h2 id='continuous-integration-ci'>Continuous integration (CI)</h2><p>Runs tests for applications. Hosted on Carrenza.</p>
+<h2 id='continuous-integration-ci'>Continuous integration (CI)</h2><p>Runs tests for applications.</p>
 <h2 id='integration'>Integration</h2><p>Used by GOV.UK product teams to test changes to software.</p>
 <p>Right now this environment is also used by content editors at GDS and in other departments
 to preview their content changes. This functionality should be replaced by draft preview
@@ -204,9 +204,7 @@ AWS configuration can be found in
           <h4>How to...</h4>
 
           <ul class="govuk-list">
-            <li><a href="/manual/adding-disks-in-vcloud.html">Add a disk to a vCloud machine (Carrenza only)</a></li>
             <li><a href="/manual/ruby.html">Add a new Ruby version</a></li>
-            <li><a href="/manual/connect-to-vcloud-director.html">Connect to vCloud Director (Carrenza only)</a></li>
             <li><a href="/manual/generate-csr.html">Generate a Certificate Signing Request (CSR) for GOV.UK</a></li>
             <li><a href="/manual/rabbitmq.html">Manage RabbitMQ</a></li>
             <li><a href="/manual/auto-scaling-groups.html">Manually resize ASGs (auto scaling groups)</a></li>
