--- a/manual/metrics.html
+++ b/manual/metrics.html
@@ -157,15 +157,8 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
             
   <p><a href='/manual.html#monitoring'>Monitoring</a></p>   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/b80bc9cad3e4265b8408187564826de69fab1de9">17 Aug 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
 </div>
 
  <h1 id='header'>Metrics</h1> <p>Metrics are measurements of something. GOV.UK use metrics to monitor
@@ -183,7 +176,7 @@ which you can view metrics about GOV.UK.</p>
 visualising metrics is that Grafana can present data Elasticsearch and
 Graphite, even on the same dashboard, whereas Graphite can only
 present data from Graphite.</p>
-<h2 id='graphite'>Graphite</h2><p>Graphite (<a href="https://graphite.publishing.service.gov.uk/">Carrenza</a>, <a href="https://graphite.production.govuk.digital/">AWS</a>) stores
+<h2 id='graphite'>Graphite</h2><p><a href="https://graphite.production.govuk.digital/">Graphite</a> stores
 metrics in a hierarchy, and the time intervals, retention periods and
 aggregation methods it uses are configurable.</p>
 <p>Graphite metrics are <a href="https://github.com/alphagov/govuk-puppet/blob/master/modules/govuk/files/node/s_graphite/storage-schemas.conf">stored for 5 years</a>,
@@ -195,7 +188,7 @@ that can go up or down.</p>
 <p>On GOV.UK, <a href="https://github.com/alphagov/govuk-puppet/blob/master/modules/statsd/templates/etc/statsd.conf.erb">StatsD is configured</a> to delete gauges. By
 default, when a metric is sent to StatsD, statsd will continually send
 it to Graphite. However, for gauges, it will only send it one time.</p>
-<h2 id='grafana'>Grafana</h2><p>Grafana (<a href="https://grafana.publishing.service.gov.uk/">Carrenza</a>, <a href="https://grafana.production.govuk.digital/">AWS</a>) on GOV.UK
+<h2 id='grafana'>Grafana</h2><p><a href="https://grafana.production.govuk.digital/">Grafana</a> on GOV.UK
 is used for dashboards. Dashboards can be created directly in the web
 interface (first you must login using the credentials username: admin
 password: admin), or added through govuk-puppet. If a dashboard is
